chore: backup code

--- a/sutd_cnn_lstm_baseline.ipynb
+++ b/sutd_cnn_lstm_baseline.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# SUTD TrafficQA \u2014 CNN + LSTM baseline (MCQ-4)\n",
+        "# SUTD TrafficQA — CNN + LSTM baseline (MCQ-4)\n",
         "\n",
         "This notebook runs the **CNN+LSTM** multiple-choice baseline (4 options) that mirrors the classic LSTM-style setup described in the SUTD-TrafficQA paper:\n",
         "- **BiLSTM** encodes the question and each candidate answer (QA Bank)\n",
@@ -35,8 +35,8 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "# %pip install -r requirements.txt\n",
@@ -53,9 +53,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {},
-      "execution_count": null,
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "PROJECT_ROOT: /datastore/clc_hcmus/ZaAIC/CS412-CV-FinalProject\n",
+            "SUTD_ROOT: /datastore/clc_hcmus/ZaAIC/CS412-CV-FinalProject/SUTD\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "import sys\n",
@@ -75,6 +84,16 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 8,
+      "id": "8d6b5111",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "os.environ['HF_HOME'] = str(PROJECT_ROOT.parent / 'hf_cache')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -83,9 +102,53 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "id": "39c90bd6",
       "metadata": {},
-      "execution_count": null,
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Created /datastore/clc_hcmus/ZaAIC/CS412-CV-FinalProject/SUTD/questions/R3_val.jsonl\n",
+            "val file: /datastore/clc_hcmus/ZaAIC/CS412-CV-FinalProject/SUTD/questions/R3_val.jsonl exists: True\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create R3_val.jsonl from R3_test.jsonl\n",
+        "import json\n",
+        "test_file = SUTD_ROOT / 'questions' / 'R3_test.jsonl'\n",
+        "val_file = SUTD_ROOT / 'questions' / 'R3_val.jsonl'\n",
+        "with open(test_file, 'r') as f_in, open(val_file, 'w') as f_out:\n",
+        "    for i, line in enumerate(f_in):\n",
+        "        if i % 5 == 0:\n",
+        "            f_out.write(line)\n",
+        "\n",
+        "print('Created', val_file)\n",
+        "print('val file:', val_file, 'exists:', val_file.exists())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "videos_dir exists: True\n",
+            "questions_dir exists: True\n",
+            "question files: ['R3_all.jsonl', 'R3_test.jsonl', 'R3_train.jsonl', 'R3_val.jsonl']\n",
+            "num videos: 10081\n",
+            "sample videos: ['c_movi7919_25.mp4', 'b_19t411q7rr_clip_016.mp4', 'b_1j7411h7kb_clip_044.mp4', 'b_1j741157BM_clip_118.mp4', 'b_1n741157ss_clip_033.mp4']\n",
+            "train file: /datastore/clc_hcmus/ZaAIC/CS412-CV-FinalProject/SUTD/questions/R3_train.jsonl exists: True\n",
+            "val file: /datastore/clc_hcmus/ZaAIC/CS412-CV-FinalProject/SUTD/questions/R3_val.jsonl exists: True\n",
+            "test file: /datastore/clc_hcmus/ZaAIC/CS412-CV-FinalProject/SUTD/questions/R3_test.jsonl exists: True\n"
+          ]
+        }
+      ],
       "source": [
         "videos_dir = SUTD_ROOT / 'videos'\n",
         "questions_dir = SUTD_ROOT / 'questions'\n",
@@ -117,9 +180,20 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {},
-      "execution_count": null,
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "epoch 1/1: 100%|█████████████████████| 25/25 [00:46<00:00,  1.84s/it, loss=1.31]\n",
+            "Epoch 1: val_acc=0.3100 (valid_samples=200)\n",
+            "  New best: 0.3100 -> saved best.pt\n",
+            "Done. Best val acc: 0.3100\n"
+          ]
+        }
+      ],
       "source": [
         "NUM_FRAMES = 16\n",
         "BATCH_SIZE = 8\n",
@@ -132,7 +206,8 @@
         "  --epochs {EPOCHS} \\\n",
         "  --max_train_samples 200 \\\n",
         "  --max_val_samples 200 \\\n",
-        "  --use_train_aug\n"
+        "  --use_train_aug \\\n",
+        "  --device 'cuda:1'\n"
       ]
     },
     {
@@ -145,21 +220,57 @@
     },
     {
       "cell_type": "code",
-      "metadata": {},
       "execution_count": null,
-      "outputs": [],
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Downloading: \"https://download.pytorch.org/models/resnet18-f37072fd.pth\" to /home/clc_hcmus2/.cache/torch/hub/checkpoints/resnet18-f37072fd.pth\n",
+            "100%|██████████████████████████████████████| 44.7M/44.7M [00:01<00:00, 25.8MB/s]\n",
+            "epoch 1/5: 100%|██████████████| 7058/7058 [3:22:35<00:00,  1.72s/it, loss=0.706]\n",
+            "Epoch 1: val_acc=0.2864 (valid_samples=1215)\n",
+            "  New best: 0.2864 -> saved best.pt\n",
+            "epoch 2/5: 100%|██████████████| 7058/7058 [2:40:35<00:00,  1.37s/it, loss=0.648]\n",
+            "Epoch 2: val_acc=0.2856 (valid_samples=1215)\n",
+            "epoch 3/5: 100%|███████████████| 7058/7058 [2:53:22<00:00,  1.47s/it, loss=0.63]\n",
+            "Epoch 3: val_acc=0.2856 (valid_samples=1215)\n",
+            "epoch 4/5: 100%|██████████████| 7058/7058 [3:20:28<00:00,  1.70s/it, loss=0.618]\n",
+            "Epoch 4: val_acc=0.2840 (valid_samples=1215)\n",
+            "epoch 5/5:  63%|████████▊     | 4468/7058 [2:08:37<41:28,  1.04it/s, loss=0.611]"
+          ]
+        }
+      ],
       "source": [
         "# Uncomment to train fully\n",
-        "# NUM_FRAMES = 16\n",
-        "# BATCH_SIZE = 8\n",
-        "# EPOCHS = 5\n",
-        "#\n",
-        "# !python train_sutd_cnn_lstm.py \\\n",
-        "#   --sutd_root \"{SUTD_ROOT}\" \\\n",
-        "#   --num_frames {NUM_FRAMES} \\\n",
-        "#   --batch_size {BATCH_SIZE} \\\n",
-        "#   --epochs {EPOCHS} \\\n",
-        "#   --use_train_aug\n"
+        "NUM_FRAMES = 16\n",
+        "BATCH_SIZE = 8\n",
+        "EPOCHS = 5\n",
+        "\n",
+        "!python train_sutd_cnn_lstm.py \\\n",
+        "  --sutd_root \"{SUTD_ROOT}\" \\\n",
+        "  --num_frames {NUM_FRAMES} \\\n",
+        "  --batch_size {BATCH_SIZE} \\\n",
+        "  --epochs {EPOCHS} \\\n",
+        "  --use_train_aug\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f5d6bded",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!python train_sutd_cnn_lstm.py \\\n",
+        "  --sutd_root \"SUTD/\" \\\n",
+        "  --num_frames 8 \\\n",
+        "  --batch_size 32 \\\n",
+        "  --epochs 5 \\\n",
+        "  --use_train_aug \\\n",
+        "  --out_dir \"outputs_tmux/\" \\\n",
+        "  --device \"cuda:7\""
       ]
     },
     {
@@ -174,11 +285,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {},
-      "execution_count": null,
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Using ckpt: /datastore/clc_hcmus/ZaAIC/CS412-CV-FinalProject/outputs_tmux/best.pt exists: True\n",
+            "evaluating: 100%|█████████████████████████████| 760/760 [13:10<00:00,  1.04s/it]\n",
+            "Test accuracy (only samples with video found): 0.3001 (valid_samples=6075)\n",
+            "Wrote predictions to sutd_cnn_lstm_predictions.csv\n"
+          ]
+        }
+      ],
       "source": [
-        "ckpt = PROJECT_ROOT / 'outputs' / 'sutd_cnn_lstm' / 'best.pt'\n",
+        "NUM_FRAMES = 8\n",
+        "\n",
+        "# ckpt = PROJECT_ROOT / 'outputs' / 'sutd_cnn_lstm' / 'best.pt'\n",
+        "ckpt = PROJECT_ROOT / 'outputs_tmux' / 'best.pt'\n",
         "print('Using ckpt:', ckpt, 'exists:', ckpt.exists())\n",
         "\n",
         "!python eval_sutd_cnn_lstm.py \\\n",
@@ -206,8 +331,16 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.x"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.9"
     }
   },
   "nbformat": 4,
